--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -20,5 +20,11 @@ en:
         terms_of_service:
           terms: By answering you accept the %{terms}
           title: By answering you accept the terms and conditions of use
+        postal_code_validator: "The postal code format is invalid. Allowed postal codes must contain four digits."
+    questions:
+      validators:
+        age: Age
+        none: Do not apply any validation
+        postal_code: Postal code
     show:
       answers_descriptions_link_text: "Read more"
