--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -8,6 +8,11 @@ en:
       framework:
         link: "Visit the Pro-Ethics framework pro-ethics.eu"
         logo: "Pro-Ethics logo"
+  guest_information:
+    form:
+      description: "You can enter your name and email address if you want us to send you news and results."
+      submit_button: "Update"
+      title: "Want to stay updated?"
   polls:
     answers:
       create:
