Adapt poll administration panel to multiple choice questions
* Allow to select the question kind through the admin poll question form
* Do not show answers link for open answers questions
* Do not show question answers information for open answer questions

--- a/config/locales/custom/en/admin.yml
+++ b/config/locales/custom/en/admin.yml
@@ -3,6 +3,7 @@ en:
     questions:
       show:
         description: "Description"
+        kind: "Question kind"
     polls:
       show:
         download_polls_results: "Download polls results"
